# kamk-cookiecutters

./: .gitignore  Makefile  README.md  cookiecutter.json  docker-compose-itsearviointi.yml  docker-compose-oat.yml  docker-compose-project.yml  docker-compose.yml
ai-customer-project/: cookiecutter.json
ai-customer-project/{{cookiecutter.__containing_folder}}/: .gitlab-ci.yml  HOW-TO-DOCS.md  docker-compose-docs.yml
ai-customer-project/{{cookiecutter.containing_folder}}/: docker-compose-docs.yml
developmental/: Dockerfile  README.md  bootstrap.sh
itsearviointi/: cookiecutter.json
itsearviointi/{{cookiecutter.containing_folder}}/: HOW-TO-DOCS.md  docker-compose-docs.yml  docs.Dockerfile  pyproject.toml
itsearviointi/{{cookiecutter.containing_folder}}/docs/docs/: .nav.yml  .pages  conclusion.md  index.md  planning.md  something.md
oppimispaivakirja/: cookiecutter.json
project/: cookiecutter.json
project/{{cookiecutter.containing_folder}}/docs/: .pages  index.md  mkdocs.yml  pyproject.toml
project/{{cookiecutter.containing_folder}}/docs/docs/: .nav.yml  .pages  index.md  puml.md  start_here.md
project/{{cookiecutter.containing_folder}}/docs/docs/documents/: .pages  srs.md  user.md  vision.md
project/{{cookiecutter.containing_folder}}/docs/docs/forms/: spec.md  user.md  vision.md
project/{{cookiecutter.containing_folder}}/docs/docs/guides/: .nav.yml  .pages  spec.md  user.md  vision.md
project/{{cookiecutter.containing_folder}}/docs/docs/meetings/: 2024-12-31-minutes.md  {{cookiecutter.__today}}-minutes.md
(+44 files in other folders)
