[project]
name = "itsearviointi-{{ cookiecutter.course_slug }}"
version = "0.42.0"
description = "A script dependency helper for student learning diary."
readme = "README.md"
requires-python = ">=3.12,<4.0"

authors = [
    { name = "{{ cookiecutter.author }}" }
]

dependencies = [
    "mkdocs-material",
    "mkdocs-awesome-nav"
]
